tests/semantic_cases/invalid/qualified_call_member_unresolved.ob0
(* INVALID: qualified procedure calls currently do not resolve imported module members *)
MODULE Main;
IMPORT B := ModuleB;
BEGIN
  B.HELLO
END Main.
